[gd_scene load_steps=10 format=3 uid="uid://bbeflllxqelnn"]

[ext_resource type="Script" path="res://Characters/goblin_archer.gd" id="1_5re4u"]
[ext_resource type="Texture2D" uid="uid://chmmnpbsnj2ru" path="res://Art Assets/character sprite/Enemy sprites/Archer Goblin Fixed.png" id="2_r7mbc"]

[sub_resource type="AtlasTexture" id="AtlasTexture_iqjvh"]
atlas = ExtResource("2_r7mbc")
region = Rect2(66, 0, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jonu"]
atlas = ExtResource("2_r7mbc")
region = Rect2(87, 0, 21, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_v1qog"]
atlas = ExtResource("2_r7mbc")
region = Rect2(3, 0, 21, 24)

[sub_resource type="SpriteFrames" id="SpriteFrames_nl6mv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqjvh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iqjvh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jonu")
}],
"loop": false,
"name": &"shooting",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v1qog")
}],
"loop": true,
"name": &"standing",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u45bw"]
size = Vector2(11, 15)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_q57vo"]
radius = 7.0
height = 20.0

[sub_resource type="CircleShape2D" id="CircleShape2D_u5h0j"]
radius = 261.002

[node name="Goblin Archer" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_5re4u")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -10)
sprite_frames = SubResource("SpriteFrames_nl6mv")
animation = &"shooting"
autoplay = "standing"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(1.5, -8.5)
shape = SubResource("RectangleShape2D_u45bw")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(2, -9)
shape = SubResource("CapsuleShape2D_q57vo")

[node name="DetectionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="DetectionArea"]
shape = SubResource("CircleShape2D_u5h0j")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_entered" from="DetectionArea" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="DetectionArea" to="." method="_on_detection_area_body_exited"]
